Added carter nuget pakcage for project to work

--- a/backend/Api.Hosting/Api.Hosting.csproj
+++ b/backend/Api.Hosting/Api.Hosting.csproj
@@ -7,6 +7,10 @@
     <ProjectReference Include="..\..\modules\github\backend\Github\Github.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Carter" Version="9.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
