--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
         "@tanstack/react-query": "^5.66.0",
         "@tanstack/react-query-devtools": "^5.66.0",
         "@tanstack/react-router": "^1.99.6",
+        "@tanstack/react-table": "^8.21.2",
         "@tanstack/router-devtools": "^1.79.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
