--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
         "@reduxjs/toolkit": "^2.5.1",
         "@repo/auth": "*",
         "@repo/template": "*",
+        "@tanstack/react-form": "^1.2.1",
         "@tanstack/react-query": "^5.66.0",
         "@tanstack/react-query-devtools": "^5.66.0",
         "@tanstack/react-router": "^1.99.6",
