--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@openapi-qraft/react": "^2.0.1",
         "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-select": "^2.1.6",
