--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="9.0.0" />
+    <PackageReference Include="DnsClient" Version="1.8.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.Humio" Version="2.0.1" />
