--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 FRONTEND_URL=
 HUMIOINGESTTOKEN=
-JWT__KEY=
-JWT__ISSUER=
-JWT__AUDIENCE=
+JWT__KEY=abcdefgh
+JWT__ISSUER=compozerr
+JWT__AUDIENCE=compozerr
