--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\Api.Abstractions\Api.Abstractions.csproj" />
     <ProjectReference Include="..\Api.Data\Api.Data.csproj" />
     <ProjectReference Include="..\Api.Hosting\Api.Hosting.csproj" />
+    <ProjectReference Include="..\..\modules\storage\backend\Storage\Storage.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="../.env">
