Added log and more changes to storage feature

--- a/modules/storage/backend/Storage/appsettings.Development.json
+++ b/modules/storage/backend/Storage/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-    "MINIO_ENDPOINT": "localhost",
-    "MINIO_ACCESS_KEY": "minioadmin",
-    "MINIO_SECRET_KEY": "minioadmin",
-    "MINIO_BUCKET": "default-bucket"
+    "MINIO__ENDPOINT": "localhost",
+    "MINIO__ACCESS_KEY": "minioadmin",
+    "MINIO__SECRET_KEY": "minioadmin",
+    "MINIO__BUCKET": "default-bucket"
 }
