--- a/backend/Api.Hosting/Api.Hosting.csproj
+++ b/backend/Api.Hosting/Api.Hosting.csproj
@@ -5,6 +5,7 @@
     <ProjectReference Include="..\Api.Data\Api.Data.csproj" />
     <ProjectReference Include="..\Api.Abstractions\Api.Abstractions.csproj" />
     <ProjectReference Include="..\..\modules\github\backend\Github\Github.csproj" />
+    <ProjectReference Include="..\..\modules\storage\backend\Storage\Storage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
