--- a/modules/storage/docker-compose.yml
+++ b/modules/storage/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2025-03-12T18-04-18Z-cpuv1
     ports:
       - "1237:9001"
       - "1238:9000"
