--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -5,6 +5,7 @@
     <ProjectReference Include="../../modules/cli/backend/Cli.Auth/Cli.Auth.csproj" />
     <ProjectReference Include="../../modules/database/backend/Database/Database.csproj" />
     <ProjectReference Include="../../modules/github/backend/Github/Github.csproj" />
+    <ProjectReference Include="../../modules/hangfire/backend/Hangfire/Hangfire.csproj" />
     <ProjectReference Include="..\..\modules\cli\backend\Cli\Cli.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\..\modules\template\backend\Template\Template.csproj" />
@@ -12,6 +13,7 @@
     <ProjectReference Include="..\Api.Data\Api.Data.csproj" />
     <ProjectReference Include="..\Api.Hosting\Api.Hosting.csproj" />
     <ProjectReference Include="..\..\modules\storage\backend\Storage\Storage.csproj" />
+    <ProjectReference Include="..\..\modules\hangfire\backend\Hangfire\Hangfire.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="../.env">
