--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres;Password=019661c0-7b26-76de-9dfc-c4ce956cdca0"
+        "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres2;Password=019661c0-7b26-76de-9dfc-c4ce956cdca0"
     },
     "Cors": {
         "AllowedOrigins": "http://localhost:1234;http://127.0.0.1:5500"
