--- a/modules/database/backend/Database/appsettings.Development.json
+++ b/modules/database/backend/Database/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres;Password=019661c0-7b26-76de-9dfc-c4ce956cdca0"
+        "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres2;Password=019661c0-7b26-76de-9dfc-c4ce956cdca0"
     }
 }
