--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,11 +34,11 @@
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
-        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-select": "^2.2.2",
         "@radix-ui/react-separator": "^1.1.2",
-        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-slot": "^1.2.0",
         "@radix-ui/react-switch": "^1.1.3",
-        "@radix-ui/react-tabs": "^1.1.3",
+        "@radix-ui/react-tabs": "^1.1.9",
         "@radix-ui/react-toast": "^1.2.6",
         "@radix-ui/react-tooltip": "^1.1.7",
         "@reduxjs/toolkit": "^2.5.1",
@@ -47,17 +47,18 @@
         "@tanstack/react-form": "^1.2.1",
         "@tanstack/react-query": "^5.66.0",
         "@tanstack/react-query-devtools": "^5.66.0",
-        "@tanstack/react-router": "^1.99.6",
+        "@tanstack/react-router": "^1.117.1",
         "@tanstack/react-table": "^8.21.2",
         "@tanstack/router-devtools": "^1.79.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "framer-motion": "^12.0.6",
         "lucide-react": "^0.474.0",
         "next-themes": "^0.4.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "recharts": "^2.15.1",
+        "recharts": "^2.15.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.2"
