--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,11 @@ updates:
     directory: "/backend"
     schedule:
       interval: "weekly"
+  - package-ecosystem: nuget
+    directory: "/modules/template/backend"
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: npm
+    directory: "/modules/template/frontend"
+    schedule:
+      interval: "weekly"
