--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@openapi-qraft/cli": "^2.6.1",
         "@repo/config": "*",
+        "@tailwindcss/postcss": "^4.1.7",
         "@tanstack/router-plugin": "^1.120.5",
         "@types/node": "^22.15.21",
         "@types/react": "^19.1.5",
