--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
         "next-themes": "^0.4.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-intersection-observer": "^9.16.0",
         "recharts": "^2.15.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
