--- a/modules/github/backend/Github/Github.csproj
+++ b/modules/github/backend/Github/Github.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Octokit" Version="13.0.1" />
+    <PackageReference Include="Octokit.Webhooks.AspNetCore" Version="2.4.1" />
     <PackageReference Include="Serilog" Version="4.2.0" />
   </ItemGroup>
 
