--- a/modules/github/backend/Github/Github.csproj
+++ b/modules/github/backend/Github/Github.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="../../../auth/backend/Auth/Auth.csproj" />
     <ProjectReference Include="../../../database/backend/Database/Database.csproj" />
     <ProjectReference Include="../Github.Abstractions/Github.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\jobs\backend\Jobs\Jobs.csproj" />
   </ItemGroup>
 
 </Project>
