Moved DeployProjectCommand and added handling

--- a/backend/Api.Abstractions/Api.Abstractions.csproj
+++ b/backend/Api.Abstractions/Api.Abstractions.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Abstractions\Core.Abstractions.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
