--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
         "@tanstack/router-devtools": "^1.79.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "currency-symbol-map": "^5.1.0",
         "date-fns": "^4.1.0",
         "framer-motion": "^12.0.6",
         "lucide-react": "^0.474.0",
