Added api abstraction

--- a/modules/stripe/backend/Stripe/Stripe.csproj
+++ b/modules/stripe/backend/Stripe/Stripe.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../../../../backend/Core/Core.csproj" />
+    <ProjectReference Include="..\..\..\..\backend\Api.Abstractions\Api.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
