--- a/modules/stripe/backend/Stripe/Stripe.csproj
+++ b/modules/stripe/backend/Stripe/Stripe.csproj
@@ -11,11 +11,18 @@
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Stripe.net" Version="48.2.0" />
+    <PackageReference Include="System.Formats.Asn1" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="../../../../backend/Core/Core.csproj" />
+    <ProjectReference Include="../../../database/backend/Database/Database.csproj" />
     <ProjectReference Include="..\..\..\..\backend\Api.Abstractions\Api.Abstractions.csproj" />
+    <ProjectReference Include="..\Stripe.Abstractions\Stripe.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
