--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\..\modules\storage\backend\Storage\Storage.csproj" />
     <ProjectReference Include="..\..\modules\jobs\backend\Jobs\Jobs.csproj" />
     <ProjectReference Include="..\..\modules\stripe\backend\Stripe\Stripe.csproj" />
+    <ProjectReference Include="..\..\modules\openTelemetry\backend\OpenTelemetry\OpenTelemetryModule.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="../.env">
