--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
     test:
-        if: github.event.ref == 'refs/heads/main' || github.event.ref == 'refs/tags/*'
+        if: github.event.ref == 'refs/heads/main' || startsWith(github.event.ref, 'refs/tags/v')
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -26,7 +26,7 @@ jobs:
             - name: Test
               run: dotnet test backend/Base.sln
     deploy:
-        if: github.event.ref == 'refs/tags/*'
+        if: startsWith(github.event.ref, 'refs/tags/v')
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
