--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,6 @@ jobs:
                   port: ${{ secrets.DEPLOY_PORT || 22 }}
                   script: |
                       cd ${{ secrets.DEPLOY_PATH }}
-                      git fetch --tags
-                      git checkout ${{ github.ref_name }}
+                      sudo git fetch --tags
+                      sudo git checkout ${{ github.ref_name }}
                       npm run serve -- -d
