--- a/modules/stripe/backend/Stripe/Stripe.csproj
+++ b/modules/stripe/backend/Stripe/Stripe.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Carter" Version="9.0.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="QuestPDF" Version="2025.7.4" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Stripe.net" Version="48.2.0" />
     <PackageReference Include="System.Formats.Asn1" Version="9.0.0" />
@@ -20,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../../../../backend/Core/Core.csproj" />
+    <ProjectReference Include="../../../auth/backend/Auth/Auth.csproj" />
     <ProjectReference Include="../../../database/backend/Database/Database.csproj" />
     <ProjectReference Include="..\..\..\..\backend\Api.Abstractions\Api.Abstractions.csproj" />
     <ProjectReference Include="..\Stripe.Abstractions\Stripe.Abstractions.csproj" />
