Added handler for failed payment

--- a/modules/stripe/backend/Stripe/Stripe.csproj
+++ b/modules/stripe/backend/Stripe/Stripe.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="../../../../backend/Core/Core.csproj" />
     <ProjectReference Include="../../../auth/backend/Auth/Auth.csproj" />
     <ProjectReference Include="../../../database/backend/Database/Database.csproj" />
+    <ProjectReference Include="../../../jobs/backend/Jobs/Jobs.csproj" />
     <ProjectReference Include="..\..\..\..\backend\Api.Abstractions\Api.Abstractions.csproj" />
     <ProjectReference Include="..\Stripe.Abstractions\Stripe.Abstractions.csproj" />
   </ItemGroup>
