--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
         tags:
             - "v*"
 
+concurrency:
+    group: deploy
+    cancel-in-progress: false
+
 jobs:
     test:
         if: github.event.ref == 'refs/heads/main' || startsWith(github.event.ref, 'refs/tags/v')
