--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,9 @@
         "@radix-ui/react-tabs": "^1.1.9",
         "@radix-ui/react-toast": "^1.2.6",
         "@radix-ui/react-tooltip": "^1.2.7",
+        "@react-three/drei": "^9.114.3",
+        "@react-three/fiber": "^8.17.10",
+        "@react-three/postprocessing": "^2.16.3",
         "@reduxjs/toolkit": "^2.5.1",
         "@repo/auth": "*",
         "@repo/template": "*",
@@ -66,6 +69,7 @@
         "recharts": "^2.15.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
+        "three": "^0.167.1",
         "zod": "^3.24.2"
     }
 }
