--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "prettier": "^3.2.5",
+    "shadcn": "^3.5.0",
     "turbo": "^2.3.0",
     "typescript": "5.5.4"
   },
